--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -6,3 +6,6 @@
 	<strong>Área:</strong> <%= @warehouse.area %> m²
 	<strong>Endereço:</strong> <%= @warehouse.address %> <strong>CEP:</strong> <%= @warehouse.cep %>
 </div>
+<div>
+  <%= link_to('Voltar', root_path) %>
+</div>
