Melhorias no Html da página inicial

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,20 @@
-<h1>Galpões & Estoque</h1>
-<h2>Galpões</h2>
-<% @warehouses.each do |w| %>
-	<%= link_to(w.name, warehouse_path(w.id)) %>
-	Código: <%= w.code %>
-	Cidade: <%= w.city %>
-	<%= w.area %> m²
-<% end %>
-<% if @warehouses.empty? %>
-	<p>Não existem galpões cadastrados</p>
-<% end %>
+<section id="warehouses">
+	<h2>Galpões</h2>
+	<% @warehouses.each do |w| %>
+		<div>
+			<h3><%= link_to(w.name, warehouse_path(w.id)) %></h3>
+			<dl>
+				<dt>Código:</dt>
+				<dd><%= w.code %></dd>
+				<dt>Cidade:</dt>
+				<dd><%= w.city %></dd>
+				<dt>Área:</dt>
+				<dd><%= w.area %> m²</dd>
+			</dl>
+		</div>
+	<% end %>
+
+	<% if @warehouses.empty? %>
+		<p>Não existem galpões cadastrados</p>
+	<% end %>
+</section>
