Adição dos formulários de criação de galpão

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <header>
       <h1>Galpões & Estoque</h1>
     </header>
+    <div>
+      <%= notice %>
+      <%= alert %>
+    </div>
     <main>
       <%= yield %>
     </main>
