--- a/app/views/warehouses/_form.html.erb
+++ b/app/views/warehouses/_form.html.erb
@@ -1,30 +1,30 @@
 <%= form_with(model: @warehouse) do |f| %>
 	<div>
-		<%= f.label :name, 'Nome' %>
+		<%= f.label :name %>
 		<%= f.text_field :name %>
 	</div>
 	<div>
-		<%= f.label :description, 'Descrição' %>
+		<%= f.label :description %>
 		<%= f.text_field :description %>
 	</div>
 	<div>
-		<%= f.label :code, 'Código' %>
+		<%= f.label :code %>
 		<%= f.text_area :code %>
 	</div>
 	<div>
-		<%= f.label :address, 'Endereço' %>
+		<%= f.label :address %>
 		<%= f.text_field :address %>
 	</div>
 	<div>
-		<%= f.label :city, 'Cidade' %>
+		<%= f.label :city %>
 		<%= f.text_field :city %>
 	</div>
 	<div>
-		<%= f.label :cep, 'CEP' %>
+		<%= f.label :cep %>
 		<%= f.text_field :cep %>
 	</div>
 	<div>
-		<%= f.label :area, 'Área' %>
+		<%= f.label :area %>
 		<%= f.number_field :area %>
 	</div>
 	<div>
