Adição da edição de galpões

--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -7,5 +7,8 @@
 	<strong>Endereço:</strong> <%= @warehouse.address %> <strong>CEP:</strong> <%= @warehouse.cep %>
 </div>
 <div>
+	<%= link_to('Editar', edit_warehouse_path(@warehouse.id)) %>
+</div>
+<div>
   <%= link_to('Voltar', root_path) %>
 </div>
