--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -8,6 +8,7 @@
 </div>
 <div>
 	<%= link_to('Editar', edit_warehouse_path(@warehouse.id)) %>
+	<%= button_to('Remover', warehouse_path(@warehouse.id), method: :delete) %>
 </div>
 <div>
   <%= link_to('Voltar', root_path) %>
