--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <header>
       <h1>Galpões & Estoque</h1>
     </header>
+    <nav>
+      <%= link_to 'Fornecedores', suppliers_path %>
+    </nav>
     <div>
       <%= notice %>
       <%= alert %>
