--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 
   <body>
     <header>
-      <h1>Galpões & Estoque</h1>
+      <%= link_to root_path do %>
+        <h1>Galpões & Estoque</h1>
+      <% end %>
     </header>
     <nav>
       <%= link_to 'Fornecedores', suppliers_path %>
