--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -7,3 +7,6 @@
 	<strong>Endereço:</strong> <%= @supplier.full_address %>
   <strong>E-mail:</strong> <%= @supplier.email %>
 </div>
+<div>
+  <%= link_to('Voltar', root_path) %>
+</div>
