--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
       <% end %>
     </header>
     <nav>
-      <%= link_to 'Fornecedores', suppliers_path %>
+      <%= link_to 'Fornecedores', suppliers_path %> |
+      <%= link_to 'Modelos de Produtos', product_models_path %>
     </nav>
     <div>
       <%= notice %>
