--- a/app/views/product_models/index.html.erb
+++ b/app/views/product_models/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Modelo de Produtos</h1>
 
+<%= link_to 'Cadastrar Novo', new_product_model_path %>
+
 <% if @product_models.any? %>
-	<% product_models.each do |pm| %>
+	<% @product_models.each do |pm| %>
 		<div>
 			<h2><%= pm.name %></h2>
 			<dl>
