--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
       <% if user_signed_in? %>
         <%= current_user.email %> |
         <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
+        <%= form_with(url: search_orders_path, method: :get) do |f| %>
+          <%= f.label :query, 'Buscar Pedido' %>
+          <%= f.text_field :query %>
+          <%= f.submit 'Buscar' %>
+        <% end %>
       <% else %>
         <%= link_to 'Entrar', new_user_session_path %>
       <% end %>
