Implementação de exibição dos pedidos do usuário

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <%= link_to 'Fornecedores', suppliers_path %> |
       <%= link_to 'Modelos de Produtos', product_models_path %> |
       <%= link_to 'Registrar Pedido', new_order_path %> |
+      <%= link_to 'Meus Pedidos', orders_path %>
       <% if user_signed_in? %>
         <%= current_user.email %> |
         <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
