--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,6 @@
-<h1><h1><%= Order.model_name.human %> <%= @order.code %></h1></h1>
+<h1>Detalhes do Pedido</h1>
+<h2><%= Order.model_name.human %> <%= @order.code %></h2>
+<%= link_to 'Editar', edit_order_path(@order.id) %>
 <dl>
 	<dt><%= Order.human_attribute_name(:warehouse_id) %>:</dt>
 	<dd><%= @order.warehouse.full_description %></dd>
