--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,4 +10,15 @@
 	<dd><%= @order.user.name %> | <%= @order.user.email %></dd>
 	<dt><%= Order.human_attribute_name(:estimated_delivery_date) %>:</dt>
 	<dd><%= I18n.localize(@order.estimated_delivery_date) %></dd>
+	<dt><%= Order.human_attribute_name(:status) %>:</dt>
+	<dd><%= I18n.translate(@order.status) %></dd>
+	<% if @order.pending? %>
+		<%= button_to 'Marcar como ENTREGUE', delivered_order_path(@order.id) %>
+		<%= button_to 'Marcar como CANCELADO', canceled_order_path(@order.id) %>
+	<% end %>
 </dl>
+
+<h2>Itens do Pedido</h2>
+<% @order.order_items.each do |item| %>
+	<%= item.quantity %> x <%= item.product_model.name %>
+<% end %>
