Implementação de adição de itens ao pedido

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,6 +19,7 @@
 </dl>
 
 <h2>Itens do Pedido</h2>
+<%= link_to 'Adicionar Item', new_order_order_item_path(@order.id) %>
 <% @order.order_items.each do |item| %>
 	<%= item.quantity %> x <%= item.product_model.name %>
 <% end %>
