Implementação de listagem do estoque do galpão

--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -13,3 +13,10 @@
 <div>
   <%= link_to('Voltar', root_path) %>
 </div>
+
+<section id='stock_products'>
+	<h2>Itens em Estoque</h2>
+	<% @stocks.each_pair do |pm, quantity|%>
+		<%= quantity %> x <%= pm.sku %>
+	<% end %>
+</section>
